Move opengl renderer to its own source
* Seperating renderer and platform to prepare for adding support for other renderers that may also work with glfw.
* The window creatiion is a pain.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(ctui
         "${CMAKE_CURRENT_SOURCE_DIR}/gl.c"
         "${CMAKE_CURRENT_SOURCE_DIR}/ctui.c"
         "${CMAKE_CURRENT_SOURCE_DIR}/ncurses.c"
+        "${CMAKE_CURRENT_SOURCE_DIR}/opengl33.c"
         "${CMAKE_CURRENT_SOURCE_DIR}/glfw.c"
 )
