Update matrix example
Use two fonts
Use half font for text
add some controls
improve window resizing behaviour
add ability to toggle fullscreen

--- a/examples/content/CMakeLists.txt
+++ b/examples/content/CMakeLists.txt
@@ -3,5 +3,7 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${ASSET_PATH}"
                "${CMAKE_BINARY_DIR}/examples/${ASSET_PATH}" COPYONLY)
 endfunction(ctui_copy_asset)
 
-ctui_copy_asset(spartan_16x16_cp437.ctuifont)
-ctui_copy_asset(spartan_16x16_cp437.png)
+ctui_copy_asset(cp437_8x16.ctuifont)
+ctui_copy_asset(cp437_8x16.png)
+ctui_copy_asset(cp437_16x16.ctuifont)
+ctui_copy_asset(cp437_16x16.png)
