--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources(ctui 
     PRIVATE 
         "${CMAKE_CURRENT_SOURCE_DIR}/fnv.c"
-        "${CMAKE_CURRENT_SOURCE_DIR}/gl.c"
+        #"${CMAKE_CURRENT_SOURCE_DIR}/gl.c"
         "${CMAKE_CURRENT_SOURCE_DIR}/ctui.c"
         "${CMAKE_CURRENT_SOURCE_DIR}/ncurses.c"
-        "${CMAKE_CURRENT_SOURCE_DIR}/opengl33.c"
-        "${CMAKE_CURRENT_SOURCE_DIR}/glfw.c"
+        #"${CMAKE_CURRENT_SOURCE_DIR}/opengl33.c"
+        #"${CMAKE_CURRENT_SOURCE_DIR}/glfw.c"
 )
